Bug 394322 - apps view fails to update
Summary: apps view fails to update
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) (show other bugs)
Version: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-05-16 12:16 UTC by Harald Sitter
Modified: 2018-05-18 11:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2018-05-16 12:16:48 UTC
On master of kf5 and plasma with Qt 5.10:

- move any /usr/share/applications/*.desktop to /tmp or elsewhere
- kbuildsycoca5
- check kickoff
- entry for the app you moved will still be there

expectation: removing a desktop file should update the view to get rid of the entry for the desktop file

- restart plasmashell
- entry is now gone as one would expect
- move the desktop file back to /usr/share/applications
- kbuildsycoca5
- check kickoff
- entry for the app doesn't reappear

expectation: adding a desktop file should update the view to add a new entry

This is working fine with plasma 5.12.5 + kf5.45 + qt5.10. Eike checked with Kicker on master and there it is working as well.

I tried to roll back applets/kickoff/ all the way to before 5.12 was forked with no improvement. So, I'd say the regression likely isn't in the applet code either :S
Comment 1 Eike Hein 2018-05-17 12:14:02 UTC
Oh wait, didn't you say yesterday it worked fine on 5.12 and is broken only in master?
Comment 2 Eike Hein 2018-05-18 11:21:04 UTC
Patch: https://phabricator.kde.org/D12958
Comment 3 Eike Hein 2018-05-18 11:23:26 UTC
Git commit 7e514201e2f193b19418a4fa454f27abcb14aeb6 by Eike Hein.
Committed on 18/05/2018 at 11:22.
Pushed by hein into branch 'master'.

Fix AppsModel not refreshing on syccoa changes.

Summary:
Fixes regression introduced by a0ca2d1bc204.

Reviewers: broulik, sitter

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D12958

M  +1    -1    applets/kicker/plugin/appsmodel.cpp

https://commits.kde.org/plasma-desktop/7e514201e2f193b19418a4fa454f27abcb14aeb6