Fix AppsModel not refreshing on syccoa changes.

Summary:
Fixes regression introduced by a0ca2d1bc204.

BUG:394322

Reviewers: broulik, sitter

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D12958